# posixutils

./: Makefile.am  configure.ac
getconf/: Makefile.include
logname/: logname-test
mesg/: mesg-test
tty/: tty-test
